# ToolBox

./: .gitattributes  .gitignore  .kali  README.md  aws_ecs2.txt  burp_conf.json  cheatsheet.txt  legion.bak.tgz  links  pentest.ws.requests.enc  pse_reformat.py~  remove.txt  werid.txt
.pse/: powerup  rpc  smb  smtp
AD_PrivEsc/: AD Enumeration Commands  Add Domain names  CheatSheet2  Checklist  Constrained Delegation Enabled
AutoRecon/: config.toml
Burpsuite/: Hackverter.ext.bapp
Examples/: POST-req.txt
PenNotes/: AWS.md
PenNotes/.obsidian/: app.json  community-plugins.json  workspace.json
PenNotes/AD/: API Recon.md  CheatSheet2 - the sauce.md  Constrained_Delegation_Enabled 1.md  LDAP.md  cheatsheet-active-directory.md
PenNotes/AD_PrivEsc/: AS-REP Roasting  CheatSheet1.md  CheatSheet2 - the sauce.md  DC Sync  Kerberoasting.md  One-liners.md  Silver Tickets
PenNotes/Mind_Maps/: pineapple.md
PenNotes/OSEP/: OS and Programming Theory.md
PenNotes/PenNotes/: Early Cascade Injection.md
PenNotes/Web/: APIs.md  Path traversal.md  RFI_LFI.md  SQLi.md  mXSS.md
Pentest-Service-Enumeration/services/: http  kerberos  nfs  powerup  psql  smtp  snmp
PowerSharpPack/: PowerSharpPack.ps1  load_GzipB64_command.txt
PowerSharpPack/PowerSharpBinaries/: Invoke-BetterSafetyKatz.ps1  Invoke-Certify.ps1  Invoke-DinvokeKatz.ps1  Invoke-Eyewitness.ps1  Invoke-Grouper2.ps1  Invoke-Grouper3.ps1  Invoke-Inveigh.ps1  Invoke-KrbRelay.ps1  Invoke-NanoDump.ps1  Invoke-P0wnedshell.ps1  Invoke-P0wnedshellx86.ps1  Invoke-PPLDump.ps1  Invoke-Rubeus.ps1  Invoke-SafetyKatz.ps1  Invoke-Seatbelt.ps1  Invoke-ShadowSpray.ps1  Invoke-SharPersist.ps1  Invoke-SharpBlock.ps1  (+20 more)
Scripts/: put.cna  python_to_rust_guide.md
Scripts/Files/encryptor/: .gitignore  Cargo.toml  README.md  build.sh  decryptor  decryptor.rs  encryptor  encryptor.rs  test.enc
Scripts/Files/encryptor/src/: decryptor.rs  main.rs
Scripts/Files/file-analyzer/file_analyzer_rust/: Cargo.toml  Dockerfile  README.md  build.sh
Scripts/Files/file-analyzer/file_analyzer_rust/examples/: sample_data.txt  simple_usage.rs
Scripts/Files/file-analyzer/file_analyzer_rust/src/: lib.rs  main.rs
Scripts/Files/file-analyzer/file_analyzer_rust/src/core/: analyzer.rs  mod.rs  patterns.rs
Scripts/Files/file-analyzer/file_analyzer_rust/src/utils/: file_utils.rs  mod.rs  output_formatter.rs
Scripts/Files/file-analyzer/file_analyzer_rust/tests/: integration_test.rs  test_data.txt
ToolBox/: PowerSharpPack.ps1  PowerUp.ps1  tmp.txt
binaries/: PowerSharpPack_http_download.txt  PowerUp.ps1  adduser.c  jdwp-shellifier.py  kali_alias  kerbrute_linux_386  kerbrute_linux_amd64  linpeas.sh  linpeas_linux_386  linpeas_linux_amd64  linpeas_linux_arm64  pass_spray  pot.txt  proxy  rev_shell_ps1_generator.py  revshell.war  sample.war  universal.ovpn  unix_chkpwd
pentest.ws.requests/: create_credential.json  create_credential.json~  create_credential_request  create_credential_request~  import_nmap_xml_scan  pentest.ws.request
plugins/: snmpwalk.py
rustic/: basics.rs  structs-enums-matching.rs  test
scripts/: CredSpray.py  URL-tester.py  credspray.py  execute_slow.py  github-scraper.py  inject-chatbot.html  monitor_vpn.py  pentest.py~  pentester.py  pentester.py~  pentester2.py  perfectOSINTtool.txt  reformat_autorecon.py  sethome.py  slow_execute.py  tor-portscanner.py  waf-tester.py
signatures/: default.yaml
sqli_payloads/: auth_bypass1.txt
(+176 files in other folders)
