[package]
name = "secure_encryptor"
version = "0.1.0"
edition = "2021"
authors = ["Security Conscious User"]
description = "A secure file/folder compression and encryption utility with opsec considerations"

[dependencies]
# Cryptography
aes-gcm = "0.10.1"      # AES-GCM authenticated encryption
argon2 = "0.5.0"        # Password hashing
rand = "0.8.5"          # Secure random number generation
zeroize = "1.5.7"       # Secure memory zeroing

# Compression
flate2 = "1.0.25"       # GZIP compression
tar = "0.4.38"          # TAR archiving

# File operations
walkdir = "2.3.3"       # Directory traversal
tempfile = "3.4.0"      # Secure temporary files

# User interface
dialoguer = "0.10.3"    # Interactive CLI prompts
rpassword = "7.2.0"     # Secure password input
indicatif = "0.17.0"    # Progress bars and indicators

[profile.release]
# Optimize for size and speed
opt-level = 3
# Strip debug symbols
debug = false
# Enable link-time optimization
lto = true
# Panic behavior: abort instead of unwinding for smaller binary
panic = "abort"
# Strip symbols to reduce binary size
strip = true
# Enable more optimizations
codegen-units = 1 