[package]
name = "file_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A comprehensive file analysis tool for cybersecurity"

[dependencies]
# Core functionality
clap = { version = "4.4", features = ["derive"] }   # Command line argument parsing
regex = "1.10"                                       # For regex pattern matching
walkdir = "2.4"                                      # Directory traversal
rayon = "1.8"                                        # Parallel processing
serde = { version = "1.0", features = ["derive"] }   # Serialization/deserialization
serde_json = "1.0"                                   # JSON handling
thiserror = "1.0"                                    # Error handling
anyhow = "1.0"                                       # Error propagation
log = "0.4"                                          # Logging
env_logger = "0.10"                                  # Logging implementation
chrono = "0.4"                                       # Time and date handling
colored = "2.0"                                      # Colored terminal output
indicatif = "0.17"                                   # Progress bars and spinners
lazy_static = "1.4"                                  # Lazy static initialization

# File analysis
byteorder = "1.5"                                    # Working with binary data
hex = "0.4"                                          # Hex encoding/decoding
base64 = "0.21"                                      # Base64 encoding/decoding
memmap2 = "0.9"                                      # Memory mapping files
sha2 = "0.10"                                        # Hash functions
md-5 = "0.10"                                        # MD5 hash

# Output formats
handlebars = "5.0"                                   # HTML template rendering
csv = "1.3"                                          # CSV file generation

[dev-dependencies]
tempfile = "3.8"                                     # Temporary files for testing
regex = "1.10"                                       # Needed for tests 